<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="newsArticle"
            type="com.test.mynewsapp.ui.data.model.Article" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_small"
            android:onClick="@{clickListener}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorImagePlaceholder"
                    android:contentDescription="@string/news_banner_image"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_launcher"
                    app:imageFromUrl="@{newsArticle.urlToImage}"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/margin_small"
                    android:weightSum="10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/image"
                    app:layout_constraintTop_toBottomOf="@+id/image">

                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:maxLength="30"
                        android:maxLines="2"
                        android:text="@{newsArticle.title}"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textStyle="bold"
                        tools:text="@string/_title_label" />
                    <!--                android:text="@{newsArticle.publishedAt}"-->
                    <TextView
                        android:id="@+id/textViewTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"
                        android:text="@string/_duration_label"
                        android:textSize="@dimen/small_text" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:maxLength="150"
                    android:maxLines="5"
                    android:text="@{newsArticle.content}"
                    android:textAppearance="?android:textAppearanceSmall"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    tools:text="@string/_content_label" />

                <TextView
                    android:id="@+id/textViewSource"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:text="@{newsArticle.source.name}"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textViewContent"
                    app:layout_constraintStart_toStartOf="@+id/textViewContent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewContent"
                    tools:text="@string/_source_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>